--- a/index.html
+++ b/index.html
@@ -126,6 +126,28 @@
                 <div id="bar-chart"></div>
             </div>
         </div>
+
+        <table class="content-table">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Last Name</th>
+                <th>Birth Date</th>
+                <th>Phone</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Points</th>
+
+            </tr>
+            </thead>
+            <tbody id="table-body-customers">
+            <!-- Data will be inserted here dynamically using JavaScript -->
+            </tbody>
+        </table>
+
+
     </main>
     <!-- End Main -->
 
